chore: add some unit tests